# mdzen

./: .gitignore  Cargo.toml  README.md  install.sh  mdzen.desktop
src/: app.rs  main.rs  markdown.rs
